--- a/default/courtroom_design.ini
+++ b/default/courtroom_design.ini
@@ -168,6 +168,7 @@ ic_chat_name = 200, 444, 78, 23
 ; 'ao2_'-less versions of the IC text display and input, but I do not know
 ; what. Still, here you go!
 ao2_ic_chat_name = 200, 444, 78, 23
+ao2_custom_blips = 280, 444, 78, 23
 
 ; An in-game tickbox that allows you to set whether your client should show
 ; custom shownames where possible, or always keep to character names.
