--- a/KFO 2x Widescreen/courtroom_design.ini
+++ b/KFO 2x Widescreen/courtroom_design.ini
@@ -153,6 +153,7 @@ ic_chat_name = 216, 384, 156, 23
 ; 'ao2_'-less versions of the IC text display and input, but I do not know
 ; what. Still, here you go!
 ao2_ic_chat_name = 216, 384, 156, 23
+ao2_custom_blips = 291, 384, 78, 23
 
 ; An in-game tickbox that allows you to set whether your client should show
 ; custom shownames where possible, or always keep to character names.
