add Logic Chess

--- a/default/effects/effects.ini
+++ b/default/effects/effects.ini
@@ -39,7 +39,7 @@ sticky = false
 stretch = false
 
 [3:reaction]
-sound = sfx-reactionding
+sound = sfx-lightbulb
 cull = false
 layer = character
 loop = true
@@ -61,3 +61,27 @@ respect_offset = true
 scaling = smooth
 sticky = false
 stretch = false
+
+[5:Chess Begin]
+sound = sfx-logicchess-begin
+cull = true
+layer = over
+loop = false
+max_duration = 0
+respect_flip = false
+respect_offset = false
+scaling = smooth
+sticky = false
+stretch = true
+
+[6:Chess End]
+sound = sfx-logicchess-complete
+cull = true
+layer = over
+loop = false
+max_duration = 0
+respect_flip = false
+respect_offset = false
+scaling = smooth
+sticky = false
+stretch = true
